Fix hamburger menu alignment

--- a/style.css
+++ b/style.css
@@ -745,7 +745,7 @@ html, body {
 
   .sidebar.collapsed #hamburger{
     top: 20px;
-    left: 3px;
+    left: auto;
   }
 
   .sidebar:not(.collapsed) .sidebar-header {
